--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     body {
       padding: 0;
       margin: 0;
-      overflow-x: hidden;
+      overflow: hidden;
       position: relative;
     }
   </style>
   <script src="p5.min.js"></script>
   <script src="p5.sound.min.js"></script>
   <script src="sketch.js"></script>
+
+  <title>Monster eyes</title>
+    <link rel="shortcut icon" href="favicon.png">
+    <meta name="keywords" content="Elisa Manzoni, portfolio">
 </head>
 
 <body>
